gcc/testsuite/rust/rustc/ui/parser/lex-bad-char-literals-3.rs
static c: char = '●●';
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {
    let ch: &str = '●●';
// { dg-error "" "" { target *-*-* } .-1 }
}

